tests/poly-fail/test.out.expected
val ok : string * int = ("string", 1)
Line 4, characters 25-26:
4 |   in test "string", test 1;;
                             ^
Error: This expression has type int but an expression was expected of type
         string

